refactor: reactive playground

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 	<title>reactive</title>
 </head>
 <body>
+	<div id="app">
+		<button id="increase">Create Book</button>
+		<button id="del-first">Delete First</button>
+		<button id="del-latest">Delete Latest</button>
+		<button id="empty">Empty Book List</button>
+		<div>total books: <span id="count">0</span></div>
+		<div>current id: <span id="curr-id">0</span></div>
+		<div id="content"></div>
+	</div>
 	<script src="main.js" type="module"></script>
 </body>
 </html>
