feat: new computed method

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<button id="empty">Empty Book List</button>
 		<div>total books: <span id="count">0</span></div>
 		<div>current id: <span id="curr-id">0</span></div>
+		<div>before tax price: $<span id="before-tax">0</span></div>
+		<div>total tax: $<span id="tax">0</span></div>
+		<div>total price: $<span id="price">0</span></div>
 		<div id="content"></div>
 	</div>
 	<script src="main.js" type="module"></script>
