--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<div>total books: <span id="count">0</span></div>
 		<div>current id: <span id="curr-id">0</span></div>
 		<div>before tax price: $<span id="before-tax">0</span></div>
-		<div>total tax: $<span id="tax">0</span></div>
-		<div>total price: $<span id="price">0</span></div>
+		<div>taxes: $<span id="tax">0</span></div>
+		<div id="price-row">total price: $<span id="price">0</span></div>
 		<div id="content"></div>
 	</div>
 	<script src="main.js" type="module"></script>
